RESOLVED FIXED23596
XMLHttpRequest.cpp no longer compiles without USE(JSC)
https://bugs.webkit.org/show_bug.cgi?id=23596
Summary XMLHttpRequest.cpp no longer compiles without USE(JSC)
Darin Fisher (:fishd, Google)
Reported 2009-01-28 12:46:49 PST
XMLHttpRequest.cpp no longer compiles without USE(JSC) It simply needs a #include "SecurityOrigin.h" Patch coming up...
Attachments
v1 patch (914 bytes, patch)
2009-01-28 12:47 PST, Darin Fisher (:fishd, Google)
eric: review+
Darin Fisher (:fishd, Google)
Comment 1 2009-01-28 12:47:46 PST
Created attachment 27117 [details] v1 patch
Eric Seidel (no email)
Comment 2 2009-01-28 15:07:11 PST
Comment on attachment 27117 [details] v1 patch r=me
Darin Fisher (:fishd, Google)
Comment 3 2009-01-28 16:02:14 PST
Note You need to log in before you can comment on or make changes to this bug.