2009-01-28  Darin Fisher  <darin@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=23596
        XMLHttpRequest.cpp no longer compiles without USE(JSC)



Canonical link: https://commits.webkit.org/32524@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40337 268f45cc-cd09-0410-ab3c-d52691b4dbfc